// protoc *.proto --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative

syntax="proto3";

option go_package = "github.com/PrasadG193/external-snapshot-metadata/pkg/grpc";

service SnapshotMetadata {
	rpc GetAllocated(GetAllocatedRequest) returns (stream GetAllocatedResponse) {}
	rpc GetDelta(GetDeltaRequest) returns (stream GetDeltaResponse) {}
}

message GetDeltaRequest {
	string security_token = 1;
  	string namespace = 2;
  	string volume = 3;
  	string base_snapshot = 4;
  	string target_snapshot = 5;
  	uint64 starting_byte_offset = 6;
  	uint32 max_results = 7;
}

message GetAllocatedRequest {
	string security_token = 1;
	string namespace = 2;
	string volume_id = 3;
	string snapshot = 4;
	uint64 starting_offset = 5;
	uint32 max_results = 6;
}

enum BlockMetadataType {
	FIXED_LENGTH=0;
	VARIABLE_LENGTH=1;
}

message BlockMetadata {
	uint64 byte_offset = 1;
	uint64 size_bytes = 2;
	bytes vendor_specific = 3;
}

message GetDeltaResponse {
	BlockMetadataType block_metadata_type = 1;
	uint64 volume_size_bytes = 2;
	repeated BlockMetadata block_metadata = 3;  
}

message GetAllocatedResponse {
	BlockMetadataType block_metadata_type = 1;
	uint64 volume_size_bytes = 2;
	repeated BlockMetadata block_metadata = 3;
}

